# CPE631NavigationROS2project

./: .gitignore  1.md  2.md  4 copy.csv  4.csv  4.csv.bak_20260430_170547  4.csv.bak_before_merge_social_three_20260501_124643  4.csv.bak_before_restore_sim_time_20260430_170821  4.md  4_final_rows.csv  CMakeLists.txt  DEVELOPMENT_SUMMARY.md  EXPERIMENT_COMMANDS.md  FRC.CSV  MODES.md  PROJECT_GUIDE.md  README.md  Untitled-1.md  a_dstar_results_25.csv  all_history.txt  cpe631_ros2_dstar_planner.xml  dynamic_4groups_headless_10.csv  experiment_results_merged_sorted.csv  experiment_results_v3.csv  experiment_results_v3.csv.bak_20260501_212002  experiment_results_v3.csv.bak_20260501_213913  experiment_results_v3.csv.bak_20260501_215746  fin3.csv  final_report_A_D_algorithms.md  optimization_summary.md  rs.sh  setup.cfg  setup.py  social_4groups_headless_10.csv  social_mix_headless.csv  social_three_modes_fixed_25.csv  social_three_modes_fixed_25_time_equiv.csv  工作总结.md  那你的命令都在这个路径下跑：.md
.claude/: settings.local.json
.roslog/: latest
.roslog_py/: latest
.roslog_run/: latest
A/: social_dstar_25.csv  social_dstar_2x.csv  social_dstar_2x_time_equiv.csv  social_dstar_fixed_25.csv  social_dstar_fixed_25.csv.bak_20260501_005406  social_dstar_fixed_25.csv.bak_20260501_103201  social_dstar_fixed_timeout.csv  social_dstar_fixed_timeout_v3.csv  social_three_modes_fixed_25.csv
codefiles/: 5.md  CONTRIBUTIONS.md  README.md  convert_csv_time.py  data_collector.py  dstar_lite_planner.py  goal_sender.py  integration_guide.yaml  ped_pose_extractor.py  peds.py  point.py  run_all_experiments.sh  run_sequential_reboot.sh  setup_and_start.sh  social_nav_node.py  social_nav_node_v2.py
copilot_history/: nav2_abort_chat.jsonl
cpe631_ros2/: peds.py
csv_supporting_files/: FRC.CSV  dynamic_4groups_headless_10.csv  experiment_duplicates_check.csv  experiment_reindex_overflow_check.csv  experiment_results_final_before_reindex_backup.csv  experiment_results_final_numbered.csv  experiment_results_merged_numbered.csv  experiment_results_merged_sorted.csv  experiment_results_reindexed_20groups.csv  experiment_results_v3.csv  experiment_summary_20groups.csv  experiment_summary_20groups_raw_backup.csv  social_4groups_headless_10.csv
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
launch/: cafe_dynamic.launch.py  teleop.launch.py
log/: latest_build
maps/: cafe.pgm  cafe.yaml
param/: custom_bt.xml  nav2_burger.yaml  nav2_dynamic_astar.yaml  nav2_dynamic_conservative.yaml  nav2_dynamic_dstar.yaml  nav2_social_astar.yaml  nav2_social_dstar.yaml  nav2_social_dynamic.yaml  nav2_social_smac.yaml  turtlebot3_burger_bridge_local.yaml
rviz/: gmapping.rviz  (+1 more)
(+103 files in other folders)
